--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,6 +12,10 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <ion-body>
+    <ion-button expand="block">Poster une annonce</ion-button>
+    <ion-button expand="block">Annonces</ion-button>
+    <ion-button expand="block">Numéros Utiles</ion-button>
+  </ion-body>
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
