--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,1 +1,11 @@
-
+ion-content{
+  --ion-color-primary: #AAD1F5;
+  --ion-color-secondary: #6C8EE7;
+  --ion-color-secondary-shade: #AAD1F5;
+  }
+  .logo {
+    width: 43%;
+    height: 43%;
+    margin-left: 33%;
+    margin-top: 2%;
+  }
