--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <div style="margin-top: 80%; align-items: center;" shape="round" expand="block">
+    <div ><ion-button class="bouton-acceuil" href="/tabs/tab1" color="secondary" shape="round">Poster une annonce</ion-button></div>
+    <div><ion-button class="bouton-acceuil" color="secondary" shape="round">Animaux perdus</ion-button></div>
+    <div><ion-button class="bouton-acceuil" href="/tabs/tab1"color="secondary" shape="round">Animaux trouvés</ion-button></div>
+  </div>
 </ion-content>
