--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,25 @@
-<ion-tabs>
+<ion-header [translucent]="true">
+  <ion-title>
+    <ion-img class="logo" src=".\assets\True_logo.png"></ion-img>
+</ion-title>
+</ion-header>
 
+<ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="add-outline"></ion-icon>
+      <ion-label>Créer</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="paw-outline"></ion-icon>
+      <ion-label>Accueil</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>Profil</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
 
+  </ion-tab-bar>
 </ion-tabs>
