--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,8 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #a1c1f7;
+
+  --ion-color-primary: #AAD1F5;
   --ion-color-primary-rgb: 161, 193, 247;
   --ion-color-primary-contrast: #000000;
   --ion-color-primary-contrast-rgb: 0, 0, 0;
@@ -12,7 +13,7 @@
   --ion-color-primary-tint: #aac7f8;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
+  --ion-color-secondary: #6C8EE7;
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
@@ -153,7 +154,7 @@
    */
 
   .ios body {
-    --ion-background-color: #000000;
+    --ion-background-color: #AAD1F5;
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
@@ -197,7 +198,7 @@
    */
 
   .md body {
-    --ion-background-color: #121212;
+    --ion-background-color: #AAD1F5;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #ffffff;
