pages connexion, inscrption, acceuil, page creer annonces sans contenu

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,8 +1,8 @@
 <ion-content>
 
-  <div style="margin-top: 80%; align-items: center;" shape="round" expand="block">
-    <div ><ion-button class="bouton-acceuil" href="/tabs/tab1" color="secondary" shape="round">Poster une annonce</ion-button></div>
-    <div><ion-button class="bouton-acceuil" color="secondary" shape="round">Animaux perdus</ion-button></div>
-    <div><ion-button class="bouton-acceuil" href="/tabs/tab1"color="secondary" shape="round">Animaux trouvés</ion-button></div>
+  <div style="margin-top: 80%; align-items: center;" shape="round"  expand="block">
+    <div ><ion-button class="bouton-acceuil" href="/tabs/tab1" color="secondary" size="large"shape="round">Poster une annonce</ion-button></div>
+    <div><ion-button class="bouton-acceuil" color="secondary" size="large" shape="round">Animaux perdus</ion-button></div>
+    <div><ion-button class="bouton-acceuil" color="secondary"size="large" shape="round">Animaux trouvés</ion-button></div>
   </div>
 </ion-content>
