--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,6 +5,7 @@
 :root {
   /** primary **/
 
+  --ion-background-color:#bfe6fd;
   --ion-color-primary: #AAD1F5;
   --ion-color-primary-rgb: 161, 193, 247;
   --ion-color-primary-contrast: #000000;
@@ -82,7 +83,6 @@
    * Dark Colors
    * -------------------------------------------
    */
-
   body {
     --ion-color-primary: #a1c1f7;
     --ion-color-primary-rgb: 161, 193, 247;
