--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,9 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tab4</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <div class="padding">
+    <ion-item>
+      <ion-label>Email :</ion-label>
+      <ion-input placeholder="Adresse Email" type="email"></ion-input>
+    </ion-item>
 
+    <ion-item>
+      <ion-label>Mot de passe :</ion-label>
+      <ion-input placeholder="Mot de passe" type="password"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Confirmer :</ion-label>
+      <ion-input placeholder="Mot de passe" type="password"></ion-input>
+    </ion-item>
+
+    <ion-button style="margin-top: 25%;"color="secondary" expand="block" shape="round">Inscription</ion-button>
+  </div>
 </ion-content>
