--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,7 +4,7 @@
 </ion-title>
 </ion-header>
 
-<ion-tabs>
+<ion-tabs class="navbar" >
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="add-outline"></ion-icon>
