--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,11 +1,13 @@
-ion-content{
-  --ion-color-primary: #AAD1F5;
-  --ion-color-secondary: #6C8EE7;
-  --ion-color-secondary-shade: #AAD1F5;
-  }
-  .logo {
-    width: 43%;
-    height: 43%;
-    margin-left: 33%;
-    margin-top: 2%;
-  }
+.logo {
+  width: 43%;
+  height: 43%;
+  margin-left: 33%;
+  margin-top: 2%;
+}
+
+.bouton-acceuil {
+  text-align : center;
+ min-width: 26rem;
+ margin-bottom: 60px;
+margin-left: 15px;
+}
